<resources>
    <string name="app_name">Snakes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="reg">ЗареЭcтруватись</string>
    <string name="enter">Вхiд</string>
    <string name="name_user">Ім\'я користувача</string>
    <string name="pass_user">Пароль</string>
    <string name="create_room_text">Створити кiмнату</string>
    <string name="all_rooms_text">Доступнi Кiмнати</string>
    <string name="play_text">Грати</string>
    <string name="version_text">Версiя</string>
    <string name="exit_text">Вихiд</string>
    <string name="sett_text">Налаштування</string>
    <string name="next_action">Подальшi дii</string>
    <string name="see">Дивитися</string>
</resources>
